# tauri-reddit-mobile-app

./: .env.example  .eslintcache  .eslintrc  .gitignore  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc  Dockerfile  README.md  capacitor.config.ts  commitlint.json  cypress.config.ts  docker-compose.yml  exemple_updater.json  index.html  izigit.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build_compile_deploy.yml  build_deploy.yml
.husky/: commit-msg
android/app/: build.gradle
cypress/e2e/: example.cy.ts
public/: manifest.webmanifest
scripts/: build-android.sh
src/: App.vue  env.ts  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: BaseApi.test.ts  BaseApi.ts
src/api/auth/: auth.test.ts  auth.ts
src/api/community/: community.model.d.ts  (+2 more)
src/components/: ExempleVitest.vue  ToolTips.vue  WindowBar.vue
src/pages/: AccessTokenPage.vue  CommunityPage.vue  CreateCommunityPage.vue  CreatePostPage.vue  DesignSystemPage.vue  HomePage.vue  LoadingPage.vue  LoginPage.vue  ProfilePage.vue  SearchPage.vue  UserPage.vue  UserSettingsPage.vue
src/router/: index.ts
src/stores/: TestStore.ts  app.store.ts  auth.store.ts  post.store.ts
src/utils/: dateUtils.ts  format.ts  formatUtils.ts  imageUtils.ts  numberUtils.ts  urlUtils.ts
src/views/: AcessToken.vue  IndexView.vue  LoginView.vue
vitest/unit/: ExempleVitest.spec.ts
(+70 files in other folders)
